tests/specs/check/no_implicit_override/main.out
Check [WILDCARD]main.ts
TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Greet'.
  greet() {}
  ~~~~~
    at file://[WILDCARD]/main.ts:6:3

error: Type checking failed.
