tests/specs/check/no_implicit_override/main.ts
class Greet {
  greet() {}
}

class Welcome extends Greet {
  greet() {}
}
